k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasky-svc
  namespace: wiz-app
spec:
  selector:
    app: tasky
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
